# rust-learning-roadmap

./: .gitignore  README.md
01_fundamentals/01_variables/: main  main.rs
01_fundamentals/02_control_flow/: main.rs
01_fundamentals/03_functions/: main.rs
01_fundamentals/04_ownership/: main.rs
01_fundamentals/05_structs_enums/: main.rs
02_intermediate/01_collections/: main.rs
02_intermediate/02_generics/: main.rs
02_intermediate/05_modules/: main.rs
02_intermediate/07_iterators_closures/: main.rs
03_advanced/01_smart_pointers/: main.rs
03_advanced/02_concurrency/: main.rs
03_advanced/04_macros/: main.rs
04_backend/01_http_basics/: main.rs
04_backend/03_rest_api/: Cargo.toml
04_backend/04_database/: main.rs
04_backend/05_auth/: main.rs
04_backend/06_middleware/: main.rs
04_backend/07_api_testing/: main.rs
05_production/02_logging/: main.rs
05_production/03_security/: main.rs
05_production/06_cicd/: main.rs
_archive/RUST_daftar_mahasiswa_be/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
_archive/RUST_daftar_mahasiswa_be/src/: api.rs  db.rs  error.rs  main.rs  models.rs
_archive/mini_project/: .gitignore  Cargo.toml
_archive/mini_project/src/: .env.example  README.md  handlers.rs  main.rs  models.rs
_archive/mini_project/static/: index.html
_archive/soccer_meet/: Cargo.toml  Makefile  curl_requests.txt  example.json
_archive/soccer_meet/migrations/: 20250905115106_init.down.sql  20250905115106_init.up.sql  20250905123142_init.down.sql  20250905123142_init.up.sql
_archive/soccer_meet/src/: main.rs
_archive/soccer_meet/src/routes/: game.rs
rust-learning-roadmap/: LICENSE  README.md
rustquest/: Cargo.toml
(+29 files in other folders)
