[package]
name = "daftar-mahasiswa-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
mongodb = "3.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3.31"
bson = { version = "2.13.0", features = ["chrono"] }
thiserror = "2.0.12"
env_logger = "0.10.1"