[package]
name = "rust-mongo-todo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "2.8.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

# --- BARU ---
actix-web = "4"
actix-cors = "0.7" # Penting untuk frontend

actix-files = "0.6"
dotenvy = "0.15"